<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_network_title"
        android:key="@string/pref_category_network_key" >

    <com.manichord.uartbridge.IntEditTextPreference
        android:key="@string/network_port_preference"
        android:title="@string/title_network_port_preference"
        android:defaultValue="@string/port_default"
        android:summary="@string/summary_network_port_preference" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_usb_title"
        android:key="@string/pref_category_usb_key" >

        <com.manichord.uartbridge.IntEditTextPreference
            android:key="@string/usb_speed_preference"
            android:title="@string/title_usb_speed_preference"
            android:defaultValue="@string/usb_speed_default"
            android:summary="@string/summary_usb_speed_preference" />

    </PreferenceCategory>
</PreferenceScreen>
